[gd_scene load_steps=8 format=3 uid="uid://cw0ac88cyi2si"]

[ext_resource type="Script" uid="uid://bji87yhdq6now" path="res://scripts/tutorial.gd" id="1_cq4me"]
[ext_resource type="Texture2D" uid="uid://c8pumrndo3u1b" path="res://assets/backgrounds/paper_bg.jpg" id="2_6yjpi"]
[ext_resource type="FontFile" uid="uid://dmwtstgnkr0oc" path="res://assets/fonts/Anton/Anton-Regular.ttf" id="3_gbqnl"]
[ext_resource type="FontFile" uid="uid://b6rxc2cd3gq82" path="res://assets/fonts/Indie_Flower/IndieFlower-Regular.ttf" id="4_ckvwl"]
[ext_resource type="Texture2D" uid="uid://dx1micry2vq1h" path="res://icons/scribble1.png" id="5_nlqja"]

[sub_resource type="GDScript" id="GDScript_288ch"]
script/source = "extends Node2D
"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7sa14"]

[node name="Node2D" type="Node2D"]
script = SubResource("GDScript_288ch")

[node name="Tutorial" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_cq4me")

[node name="HTTPRequest" type="HTTPRequest" parent="Tutorial"]

[node name="Background" type="TextureRect" parent="Tutorial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6yjpi")
expand_mode = 1

[node name="Ritorna Indietro" type="Button" parent="Tutorial"]
layout_mode = 0
offset_left = 121.0
offset_top = 84.0
offset_right = 279.0
offset_bottom = 190.0
theme_override_colors/font_color = Color(0.827315, 0.799741, 0.989417, 1)
theme_override_constants/outline_size = 14
theme_override_constants/h_separation = 7
theme_override_constants/icon_max_width = 510
theme_override_constants/align_to_largest_stylebox = 32
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("3_gbqnl")
theme_override_font_sizes/font_size = 50
text = "Ritorna Indietro"
icon = SubResource("CompressedTexture2D_7sa14")
flat = true
text_overrun_behavior = 2
icon_alignment = 1
expand_icon = true

[node name="Input" type="LineEdit" parent="Tutorial"]
layout_mode = 0
offset_left = 213.0
offset_top = 877.0
offset_right = 1326.0
offset_bottom = 995.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ckvwl")
theme_override_font_sizes/font_size = 50
placeholder_text = "Scrivi qui"

[node name="Invio" type="Button" parent="Tutorial"]
layout_mode = 0
offset_left = 1636.0
offset_top = 883.0
offset_right = 1809.0
offset_bottom = 994.0
text = "VAI"
icon = ExtResource("5_nlqja")

[node name="Risposta" type="RichTextLabel" parent="Tutorial"]
layout_mode = 0
offset_left = 130.0
offset_top = 209.0
offset_right = 1818.0
offset_bottom = 826.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -5
theme_override_fonts/normal_font = ExtResource("4_ckvwl")
theme_override_font_sizes/normal_font_size = 45
text = "giao
fiao"

[connection signal="request_completed" from="Tutorial/HTTPRequest" to="Tutorial" method="_on_http_request_request_completed"]
[connection signal="pressed" from="Tutorial/Ritorna Indietro" to="Tutorial" method="_on_ritorna_indietro_pressed"]
[connection signal="pressed" from="Tutorial/Invio" to="Tutorial" method="_on_invio_pressed"]
